<resources>
    <string name="app_name">SecretChat</string>
    <string name="google_api_key2">AIzaSyBlgz0RJlUUzIY5nW5DvxpMAb9CogjcyPk</string>
    <string name="weather_service_url">https://api.openweathermap.org/data/2.5/weather</string>
    <string name="weather_service_api_key">b65b8fa561ad124ec8ef76f7514baac3</string>
    <string name="self_key_pair_name">self_key</string>
    <string name="preference_name">secretChatPreference</string>
    <string name="self_id_preference_key">selfId</string>
    <string name="message_service_cmd_key">messageServiceCommand</string>
    <string name="cloud_storage_root_folder_name">UploadedFiles</string>
    <string name="media_storage_root">media</string>
    <string name="media_sent_storage_root">media_sent</string>
    <string name="profile_picture_folder_path">ProfilePictures</string>

    <!-- Chat List Name -->
    <string name="name_1">Harry Potter</string>
    <string name="name_2">Handsome Potter</string>
    <string name="name_3">Happy Potter</string>
    <string name="name_4">Hello Potter</string>

    <!-- Chat List Message -->
    <string name="msg_1">Hi Potter</string>
    <string name="msg_2">Hello Potter</string>
    <string name="msg_3">Bye Potter</string>
    <string name="msg_4">Sorry Potter</string>

    <!-- Chat List Date -->
    <string name="date_1">3h</string>
    <string name="date_2">Tue</string>
    <string name="date_3">Mon</string>
    <string name="date_4">Sun</string>
    <string name="sender_message">Sender Message</string>
    <string name="msg_time">14:30</string>
    <string name="receiver_message">Receiver Message</string>

    <string name="userID">User ID:</string>
    <string name="icon">icon</string>
    <string name="register">Register</string>

    <!-- Attachment Menu -->
    <string name="photo">Photos</string>
    <string name="video">Videos</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>

    <!-- Weather Dialog -->
    <string name="weather_dialog_status_update">Updating</string>

</resources>